--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,16 +12,17 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "3.0.0",
-		"@sveltejs/kit": "2.0.0",
-		"@sveltejs/vite-plugin-svelte": "3.0.0",
+		"@sveltejs/adapter-auto": "3.2.2",
+		"@sveltejs/kit": "2.5.20",
+		"@sveltejs/vite-plugin-svelte": "3.1.1",
 		"@vadirn/eslint": "workspace:*",
-		"@vadirn/tsconfig": "workspace:*",
+		"@vadirn/monorepo": "workspace:*",
 		"@vadirn/testing": "workspace:*",
+		"@vadirn/tsconfig": "workspace:*",
 		"svelte": "5.0.0-next.1",
-		"svelte-check": "3.6.0",
-		"tslib": "2.4.1",
-		"vite": "5.0.3"
+		"svelte-check": "3.8.5",
+		"tslib": "2.6.3",
+		"vite": "5.4.0"
 	},
 	"type": "module"
 }
