--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -8,18 +8,19 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"devDependencies": {
-		"@eslint/compat": "1.1.0",
+		"@eslint/compat": "1.1.1",
 		"@eslint/eslintrc": "3.1.0",
-		"@eslint/js": "9.6.0",
+		"@eslint/js": "9.8.0",
 		"@vadirn/monorepo": "workspace:*",
 		"@vadirn/tsconfig": "workspace:*",
-		"eslint": "9.0.0",
+		"eslint": "9.8.0",
 		"eslint-config-prettier": "9.1.0",
 		"eslint-import-resolver-typescript": "3.6.1",
 		"eslint-plugin-import": "2.29.1",
-		"eslint-plugin-import-x": "0.5.3",
-		"eslint-plugin-prettier": "5.1.3",
-		"globals": "15.0.0",
-		"typescript-eslint": "8.0.0-alpha.20"
+		"eslint-plugin-import-x": "3.1.0",
+		"eslint-plugin-prettier": "5.2.1",
+		"eslint-plugin-svelte": "2.43.0",
+		"globals": "15.9.0",
+		"typescript-eslint": "8.0.1"
 	}
 }
