--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,21 +8,20 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test": "vitest",
-		"lint": "prettier --check . &&  eslint .",
-		"format": "prettier --write ."
+		"lint": "eslint ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "3.2.2",
-		"@sveltejs/kit": "2.5.27",
+		"@sveltejs/adapter-auto": "3.3.1",
+		"@sveltejs/kit": "2.7.4",
 		"@sveltejs/vite-plugin-svelte": "4.0.0",
 		"@vadirn/eslint": "workspace:*",
 		"@vadirn/monorepo": "workspace:*",
 		"@vadirn/testing": "workspace:*",
 		"@vadirn/tsconfig": "workspace:*",
-		"svelte": "5.0.0",
-		"svelte-check": "4.0.0",
-		"tslib": "2.6.3",
-		"vite": "5.4.4"
+		"svelte": "5.1.9",
+		"svelte-check": "4.0.5",
+		"tslib": "2.8.1",
+		"vite": "5.4.10"
 	},
 	"type": "module"
 }
