--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -8,19 +8,20 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"devDependencies": {
-		"@eslint/compat": "1.1.1",
+		"@eslint/compat": "1.2.2",
 		"@eslint/eslintrc": "3.1.0",
-		"@eslint/js": "9.8.0",
+		"@eslint/js": "9.14.0",
+		"@stylistic/eslint-plugin": "2.10.1",
 		"@vadirn/monorepo": "workspace:*",
 		"@vadirn/tsconfig": "workspace:*",
-		"eslint": "9.8.0",
+		"eslint": "9.14.0",
 		"eslint-config-prettier": "9.1.0",
-		"eslint-import-resolver-typescript": "3.6.1",
-		"eslint-plugin-import": "2.29.1",
-		"eslint-plugin-import-x": "3.1.0",
+		"eslint-import-resolver-typescript": "3.6.3",
+		"eslint-plugin-import-x": "4.4.0",
 		"eslint-plugin-prettier": "5.2.1",
-		"eslint-plugin-svelte": "2.43.0",
-		"globals": "15.9.0",
-		"typescript-eslint": "8.0.1"
+		"eslint-plugin-svelte": "2.46.0",
+		"globals": "15.11.0",
+		"svelte-eslint-parser": "0.43.0",
+		"typescript-eslint": "8.12.2"
 	}
 }
