--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -13,7 +13,7 @@
 		"@eslint/js": "9.14.0",
 		"@stylistic/eslint-plugin": "2.10.1",
 		"@vadirn/monorepo": "workspace:*",
-		"@vadirn/tsconfig": "workspace:*",
+		"@vadirn/jsconfig": "workspace:*",
 		"eslint": "9.14.0",
 		"eslint-config-prettier": "9.1.0",
 		"eslint-import-resolver-typescript": "3.6.3",
