--- a/tools/monorepo/package.json
+++ b/tools/monorepo/package.json
@@ -8,7 +8,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"devDependencies": {
-		"@vadirn/tsconfig": "workspace:*",
+		"@vadirn/jsconfig": "workspace:*",
 		"find-up": "7.0.0"
 	}
 }
