--- a/ui/theme/package.json
+++ b/ui/theme/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@vadirn/eslint": "workspace:*",
 		"@vadirn/jsconfig": "workspace:*",
+		"@vadirn/monorepo": "workspace:*",
 		"autoprefixer": "10.4.20",
 		"postcss": "8.4.47",
 		"tailwindcss": "3.4.14"
