--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 	"packageManager": "pnpm@9.12.3",
 	"devDependencies": {
 		"@bessonovs/set-project-references": "0.0.10",
-		"@vadirn/eslint": "workspace:*",
-		"@vadirn/tsconfig": "workspace:*",
+		"@workspace/eslint": "workspace:*",
+		"@workspace/tsconfig": "workspace:*",
 		"turbo": "2.2.3",
 		"typescript": "5.6.3",
 		"vitest": "2.1.4"
