--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@vadirn/eslint",
+	"name": "@workspace/eslint",
 	"type": "module",
 	"exports": {
 		".": "./src/index.js"
@@ -12,8 +12,8 @@
 		"@eslint/eslintrc": "3.1.0",
 		"@eslint/js": "9.14.0",
 		"@stylistic/eslint-plugin": "2.10.1",
-		"@vadirn/monorepo": "workspace:*",
-		"@vadirn/jsconfig": "workspace:*",
+		"@workspace/monorepo": "workspace:*",
+		"@workspace/jsconfig": "workspace:*",
 		"eslint": "9.14.0",
 		"eslint-config-prettier": "9.1.0",
 		"eslint-import-resolver-typescript": "3.6.3",
