chore: cleanup vitest workspace config

--- a/libs/result/package.json
+++ b/libs/result/package.json
@@ -4,5 +4,13 @@
     ".": "./src/index.js"
   },
   "scripts": {},
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@workspace/eslint": "workspace:*",
+    "@workspace/tsconfig": "workspace:*"
+  },
+  "dependencies": {
+    "@workspace/standard": "workspace:*",
+    "@workspace/testing": "workspace:*"
+  }
 }
