chore: result cleanup

--- a/libs/standard/package.json
+++ b/libs/standard/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@workspace/standard",
   "exports": {
-    "./function": "./src/function.ts"
+    "./function": "./src/function.ts",
+    "./promise": "./src/promise.ts"
   },
   "scripts": {},
   "type": "module",
