--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,8 @@
 		"@workspace/testing": "workspace:*",
 		"@workspace/theme": "workspace:*",
 		"@workspace/tsconfig": "workspace:*",
+		"mdsvex": "0.12.3",
+		"shiki": "1.22.2",
 		"svelte": "5.1.9",
 		"svelte-check": "4.0.5",
 		"tslib": "2.8.1",
