--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,7 @@
 # top-most EditorConfig file
 root = true
 
-[*.{js,json,dot,css,scss},.env]
+[*.{js,json,ts,svelte},.env]
 charset = utf-8
 indent_style = tab
 end_of_line = lf
