--- a/libs/standard/package.json
+++ b/libs/standard/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "@workspace/standard",
-  "exports": {
-    "./function": "./src/function.ts",
-    "./promise": "./src/promise.ts"
-  },
-  "scripts": {},
-  "type": "module",
-  "devDependencies": {
-    "@workspace/eslint": "workspace:*",
-    "@workspace/tsconfig": "workspace:*"
-  }
+	"name": "@workspace/standard",
+	"exports": {
+		"./common": "./src/common.ts",
+		"./function": "./src/function.ts",
+		"./promise": "./src/promise.ts",
+		"./string": "./src/string.ts"
+	},
+	"scripts": {},
+	"type": "module",
+	"devDependencies": {
+		"@workspace/eslint": "workspace:*",
+		"@workspace/testing": "workspace:*",
+		"@workspace/tsconfig": "workspace:*"
+	}
 }
