--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -11,9 +11,10 @@
 		"@eslint/compat": "1.2.2",
 		"@eslint/eslintrc": "3.1.0",
 		"@eslint/js": "9.14.0",
+		"@eslint/json": "0.6.0",
 		"@stylistic/eslint-plugin": "2.10.1",
-		"@workspace/monorepo": "workspace:*",
 		"@workspace/jsconfig": "workspace:*",
+		"@workspace/monorepo": "workspace:*",
 		"eslint": "9.14.0",
 		"eslint-import-resolver-typescript": "3.6.3",
 		"eslint-plugin-import-x": "4.4.0",
