--- a/.editorconfig
+++ b/.editorconfig
@@ -3,9 +3,13 @@
 # top-most EditorConfig file
 root = true
 
-[*.{js,json,ts,svelte},.env]
+[*]
 charset = utf-8
 indent_style = tab
+indent_size = 6
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.{json}]
+indent_size = 2
