--- a/ui/components/package.json
+++ b/ui/components/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "@workspace/components",
-  "exports": {
-    "./logo": "./src/Logo/index.ts",
-    "./navigation": "./src/Navigation/index.ts"
-  },
-  "scripts": {
-    "lint": "eslint ."
-  },
-  "type": "module",
-  "devDependencies": {
-    "@workspace/eslint": "workspace:*",
-    "@workspace/jsconfig": "workspace:*",
-    "svelte": "5.1.9",
-    "svelte-check": "4.0.5"
-  },
-  "dependencies": {
-    "@workspace/standard": "workspace:*"
-  }
+	"name": "@workspace/components",
+	"exports": {
+		"./logo": "./src/Logo/index.ts",
+		"./navigation": "./src/Navigation/index.ts"
+	},
+	"scripts": {
+		"lint": "eslint ."
+	},
+	"type": "module",
+	"devDependencies": {
+		"@workspace/eslint": "workspace:*",
+		"@workspace/stylelint": "workspace:*",
+		"@workspace/tsconfig": "workspace:*",
+		"svelte": "5.1.9",
+		"svelte-check": "4.0.5"
+	},
+	"dependencies": {
+		"@workspace/standard": "workspace:*"
+	}
 }
