--- a/ui/components/tsconfig.json
+++ b/ui/components/tsconfig.json
@@ -15,5 +15,9 @@
 		"src/**/*.ts",
 		"src/**/*.svelte"
 	],
-	"references": []
+	"references": [
+		{
+			"path": "../../libs/standard"
+		}
+	]
 }
