--- a/ui/theme/package.json
+++ b/ui/theme/package.json
@@ -6,13 +6,14 @@
 		"./tailwindcss": "./src/tailwindcss.js"
 	},
 	"scripts": {
-		"lint": "eslint ."
+		"lint": "eslint . && stylelint **/*.css"
 	},
 	"type": "module",
 	"devDependencies": {
 		"@workspace/eslint": "workspace:*",
 		"@workspace/jsconfig": "workspace:*",
 		"@workspace/monorepo": "workspace:*",
+		"@workspace/stylelint": "workspace:*",
 		"autoprefixer": "10.4.20",
 		"postcss": "8.4.47",
 		"tailwindcss": "3.4.14"
