chore: state-controller

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -28,6 +28,9 @@
 			"path": "../../libs/routing"
 		},
 		{
+			"path": "../../libs/standard"
+		},
+		{
 			"path": "../../ui/components"
 		}
 	]
