--- a/libs/standard/package.json
+++ b/libs/standard/package.json
@@ -6,7 +6,8 @@
 		"./number": "./src/number.ts",
 		"./promise": "./src/promise.ts",
 		"./string": "./src/string.ts",
-		"./style": "./src/style.ts"
+		"./style": "./src/style.ts",
+		"./type": "./src/type.ts"
 	},
 	"scripts": {},
 	"type": "module",
