feat: state-machines-for-the-rest-of-us

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,8 @@
 	"dependencies": {
 		"@workspace/components": "workspace:*",
 		"@workspace/routing": "workspace:*",
-		"@workspace/standard": "workspace:*"
+		"@workspace/standard": "workspace:*",
+		"@workspace/state-controller": "workspace:*"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "3.3.1",
