--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -31,6 +31,9 @@
 			"path": "../../libs/standard"
 		},
 		{
+			"path": "../../libs/state-controller"
+		},
+		{
 			"path": "../../ui/components"
 		}
 	]
