--- a/libs/standard/package.json
+++ b/libs/standard/package.json
@@ -4,6 +4,7 @@
 		"./common": "./src/common.ts",
 		"./function": "./src/function.ts",
 		"./number": "./src/number.ts",
+		"./object": "./src/object.ts",
 		"./promise": "./src/promise.ts",
 		"./string": "./src/string.ts",
 		"./style": "./src/style.ts",
