--- a/tools/tsconfig/package.json
+++ b/tools/tsconfig/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@workspace/tsconfig",
+	"name": "@tools/tsconfig",
 	"type": "module",
 	"exports": {
 		"./base.json": "./src/base.json"
