--- a/libs/result/package.json
+++ b/libs/result/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@workspace/result",
-  "exports": {
-    ".": "./src/index.ts"
-  },
-  "scripts": {},
-  "type": "module",
-  "devDependencies": {
-    "@workspace/eslint": "workspace:*",
-    "@workspace/tsconfig": "workspace:*"
-  },
-  "dependencies": {
-    "@workspace/standard": "workspace:*",
-    "@workspace/testing": "workspace:*"
-  }
+	"name": "@tools/result",
+	"exports": {
+		".": "./src/index.ts"
+	},
+	"scripts": {},
+	"type": "module",
+	"devDependencies": {
+		"@tools/eslint": "workspace:*",
+		"@tools/testing": "workspace:*",
+		"@tools/tsconfig": "workspace:*"
+	},
+	"dependencies": {
+		"@libs/standard": "workspace:*"
+	}
 }
