--- a/libs/standard/package.json
+++ b/libs/standard/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@workspace/standard",
+	"name": "@libs/standard",
 	"exports": {
 		"./common": "./src/common.ts",
 		"./function": "./src/function.ts",
@@ -13,8 +13,8 @@
 	"scripts": {},
 	"type": "module",
 	"devDependencies": {
-		"@workspace/eslint": "workspace:*",
-		"@workspace/testing": "workspace:*",
-		"@workspace/tsconfig": "workspace:*"
+		"@tools/eslint": "workspace:*",
+		"@tools/testing": "workspace:*",
+		"@tools/tsconfig": "workspace:*"
 	}
 }
