--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
 	"packageManager": "pnpm@9.14.2",
 	"devDependencies": {
 		"@bessonovs/set-project-references": "0.0.10",
-		"@workspace/tsconfig": "workspace:*",
+		"@tools/tsconfig": "workspace:*",
 		"turbo": "2.3.1",
 		"typescript": "5.6.3",
 		"vitest": "2.1.5"
 	},
 	"workspaces": [
 		"apps/*",
-		"tools/*",
+		"core/*",
 		"ui/*",
+		"domain",
 		"libs/*",
-		"core/*"
+		"tools/*"
 	]
 }
