--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@workspace/eslint",
+	"name": "@tools/eslint",
 	"type": "module",
 	"exports": {
 		".": "./src/index.js"
@@ -13,8 +13,8 @@
 		"@eslint/js": "9.15.0",
 		"@eslint/json": "0.7.0",
 		"@stylistic/eslint-plugin": "2.11.0",
-		"@workspace/jsconfig": "workspace:*",
-		"@workspace/monorepo": "workspace:*",
+		"@tools/jsconfig": "workspace:*",
+		"@tools/monorepo": "workspace:*",
 		"eslint": "9.15.0",
 		"eslint-import-resolver-typescript": "3.6.3",
 		"eslint-plugin-import-x": "4.4.3",
