--- a/ui/components/tsconfig.json
+++ b/ui/components/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@workspace/tsconfig/base.json",
+	"extends": "@tools/tsconfig/base.json",
 	"compilerOptions": {
 		"module": "ESNext",
 		"moduleResolution": "Bundler",
