--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
 		"lint": "turbo lint",
 		"format": "turbo format",
 		"test": "turbo test",
+		"update": "package-update",
 		"check-project-references": "set-project-references",
 		"set-project-references": "set-project-references --save"
 	},
-	"packageManager": "pnpm@9.14.2",
+	"packageManager": "pnpm@9.14.4",
 	"devDependencies": {
 		"@bessonovs/set-project-references": "0.0.10",
+		"@tools/package-update": "workspace:*",
 		"@tools/tsconfig": "workspace:*",
-		"turbo": "2.3.1",
-		"typescript": "5.6.3",
-		"vitest": "2.1.5"
+		"turbo": "2.3.3",
+		"typescript": "5.7.2",
+		"vitest": "2.1.8"
 	},
 	"workspaces": [
 		"apps/*",
