chore: modal component

--- a/core/database/tsconfig.json
+++ b/core/database/tsconfig.json
@@ -2,5 +2,10 @@
 	"extends": "@tools/tsconfig/base.json",
 	"include": [
 		"src/**/*"
+	],
+	"references": [
+		{
+			"path": "../../libs/result"
+		}
 	]
 }
