--- a/ui/components/tsconfig.json
+++ b/ui/components/tsconfig.json
@@ -17,7 +17,13 @@
 	],
 	"references": [
 		{
+			"path": "../../libs/shortcuts"
+		},
+		{
 			"path": "../../libs/standard"
+		},
+		{
+			"path": "../actions"
 		}
 	]
 }
