--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,20 +19,20 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "3.3.1",
-		"@sveltejs/kit": "2.9.0",
+		"@sveltejs/kit": "2.9.1",
 		"@sveltejs/vite-plugin-svelte": "5.0.1",
 		"@tools/eslint": "workspace:*",
 		"@tools/monorepo": "workspace:*",
 		"@tools/stylelint": "workspace:*",
 		"@tools/testing": "workspace:*",
-		"@ui/theme": "workspace:*",
+		"@ui/theme-next": "workspace:*",
 		"@tools/tsconfig": "workspace:*",
 		"mdsvex": "0.12.3",
-		"shiki": "1.24.0",
-		"svelte": "5.6.2",
+		"shiki": "1.24.2",
+		"svelte": "5.10.0",
 		"svelte-check": "4.1.1",
 		"tslib": "2.8.1",
-		"vite": "6.0.2"
+		"vite": "6.0.3"
 	},
 	"type": "module"
 }
