--- a/tools/stylelint/package.json
+++ b/tools/stylelint/package.json
@@ -15,6 +15,8 @@
 		"postcss-html": "1.7.0",
 		"stylelint": "16.11.0",
 		"stylelint-config-html": "1.1.0",
-		"stylelint-config-standard": "36.0.1"
+		"stylelint-config-recess-order": "5.1.1",
+		"stylelint-config-standard": "36.0.1",
+		"stylelint-gamut": "1.3.4"
 	}
 }
