--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@libs/routing": "workspace:*",
+		"@libs/runes": "workspace:*",
 		"@libs/shortcuts": "workspace:*",
 		"@libs/standard": "workspace:*",
 		"@libs/state-controller": "workspace:*",
@@ -19,18 +20,18 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "3.3.1",
-		"@sveltejs/kit": "2.9.1",
-		"@sveltejs/vite-plugin-svelte": "5.0.1",
+		"@sveltejs/kit": "2.12.1",
+		"@sveltejs/vite-plugin-svelte": "5.0.3",
 		"@tools/eslint": "workspace:*",
 		"@tools/monorepo": "workspace:*",
 		"@tools/stylelint": "workspace:*",
 		"@tools/svelte-local-selector": "workspace:*",
 		"@tools/testing": "workspace:*",
 		"@tools/tsconfig": "workspace:*",
-		"@ui/theme-next": "workspace:*",
+		"@ui/theme-uno": "workspace:*",
 		"mdsvex": "0.12.3",
 		"shiki": "1.24.2",
-		"svelte": "5.10.0",
+		"svelte": "5.14.4",
 		"svelte-check": "4.1.1",
 		"tslib": "2.8.1",
 		"vite": "6.0.3"
