--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,7 +28,7 @@
 		"@tools/svelte-local-selector": "workspace:*",
 		"@tools/testing": "workspace:*",
 		"@tools/tsconfig": "workspace:*",
-		"@ui/theme-uno": "workspace:*",
+		"@ui/theme": "workspace:*",
 		"mdsvex": "0.12.3",
 		"shiki": "1.24.2",
 		"svelte": "5.14.4",
