--- a/ui/theme/package.json
+++ b/ui/theme/package.json
@@ -1,21 +1,24 @@
 {
 	"name": "@ui/theme",
 	"exports": {
-		"./css/app.css": "./src/css/app.css",
-		"./postcss": "./src/postcss.js",
-		"./tailwindcss": "./src/tailwindcss.js"
+		"./uno": "./src/uno.config.ts",
+		"./postcss": "./src/postcss.config.js",
+		"./vite": "./src/vite-plugin.js",
+		"./css": "./src/css/index.css"
 	},
-	"scripts": {
-		"lint": "eslint . && stylelint **/*.css"
-	},
+	"scripts": {},
 	"type": "module",
 	"devDependencies": {
+		"@libs/standard": "workspace:*",
 		"@tools/eslint": "workspace:*",
-		"@tools/jsconfig": "workspace:*",
-		"@tools/monorepo": "workspace:*",
 		"@tools/stylelint": "workspace:*",
-		"autoprefixer": "10.4.20",
+		"@tools/tsconfig": "workspace:*",
+		"@unocss/extractor-svelte": "0.65.1",
+		"@unocss/postcss": "0.65.1",
+		"@unocss/preset-mini": "0.65.1",
 		"postcss": "8.4.49",
-		"tailwindcss": "3.4.16"
+		"postcss-import": "16.1.0",
+		"postcss-preset-env": "10.1.2",
+		"unocss": "0.65.1"
 	}
 }
