--- a/libs/runes/package.json
+++ b/libs/runes/package.json
@@ -1,8 +1,6 @@
 {
 	"name": "@libs/runes",
-	"exports": {
-		"./media-query": "./src/media-query.svelte.ts"
-	},
+	"exports": {},
 	"scripts": {},
 	"type": "module",
 	"devDependencies": {
