--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
 		"lint": "eslint . && stylelint **/*.{css,svelte}"
 	},
 	"dependencies": {
+		"@domain/all": "workspace:*",
 		"@libs/routing": "workspace:*",
 		"@libs/runes": "workspace:*",
 		"@libs/shortcuts": "workspace:*",
