--- a/ui/components/package.json
+++ b/ui/components/package.json
@@ -5,6 +5,7 @@
 		"./navigation": "./src/content/Navigation/index.ts",
 		"./field": "./src/forms/Field/index.ts",
 		"./modal": "./src/overlays/Modal/index.ts",
+		"./meta": "./src/utils/Meta/index.ts",
 		"./shortcut": "./src/utils/Shortcut/index.ts",
 		"./theme-switcher": "./src/utils/ThemeSwitcher/index.ts"
 	},
