--- a/ui/theme/package.json
+++ b/ui/theme/package.json
@@ -16,6 +16,7 @@
 		"@unocss/extractor-svelte": "65.4.3",
 		"@unocss/postcss": "65.4.3",
 		"@unocss/preset-mini": "65.4.3",
+		"@unocss/svelte-scoped": "65.4.3",
 		"postcss": "8.5.1",
 		"postcss-import": "16.1.0",
 		"postcss-preset-env": "10.1.3",
