--- a/ui/theme/package.json
+++ b/ui/theme/package.json
@@ -9,8 +9,10 @@
 	"scripts": {},
 	"type": "module",
 	"devDependencies": {
+		"@csstools/postcss-global-data": "3.0.0",
 		"@libs/standard": "workspace:*",
 		"@tools/eslint": "workspace:*",
+		"@tools/monorepo": "workspace:*",
 		"@tools/stylelint": "workspace:*",
 		"@tools/tsconfig": "workspace:*",
 		"@unocss/extractor-svelte": "65.4.3",
