--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,7 +22,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "4.0.0",
-		"@sveltejs/kit": "2.16.1",
+		"@sveltejs/kit": "2.17.1",
 		"@sveltejs/vite-plugin-svelte": "5.0.3",
 		"@tools/eslint": "workspace:*",
 		"@tools/monorepo": "workspace:*",
@@ -30,13 +30,13 @@
 		"@tools/svelte-local-selector": "workspace:*",
 		"@tools/testing": "workspace:*",
 		"@tools/tsconfig": "workspace:*",
-		"@ui/theme": "workspace:*",
+		"@ui/theme-next": "workspace:*",
 		"mdsvex": "0.12.3",
-		"shiki": "2.2.0",
-		"svelte": "5.19.6",
+		"shiki": "2.3.2",
+		"svelte": "5.19.9",
 		"svelte-check": "4.1.4",
 		"tslib": "2.8.1",
-		"vite": "6.0.11"
+		"vite": "6.1.0"
 	},
 	"type": "module"
 }
