--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,7 +30,7 @@
 		"@tools/svelte-local-selector": "workspace:*",
 		"@tools/testing": "workspace:*",
 		"@tools/tsconfig": "workspace:*",
-		"@ui/theme-next": "workspace:*",
+		"@ui/theme": "workspace:*",
 		"mdsvex": "0.12.3",
 		"shiki": "2.4.2",
 		"svelte": "5.20.1",
