--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"check-project-references": "set-project-references",
 		"set-project-references": "set-project-references --save"
 	},
-	"packageManager": "pnpm@9.15.0",
+	"packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
 	"devDependencies": {
 		"@bessonovs/set-project-references": "0.0.10",
 		"@tools/package-update": "workspace:*",
