--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
 		"check-project-references": "set-project-references",
 		"set-project-references": "set-project-references --save"
 	},
-	"packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
+	"packageManager": "pnpm@10.4.1",
 	"devDependencies": {
 		"@bessonovs/set-project-references": "0.0.10",
 		"@tools/package-update": "workspace:*",
 		"@tools/tsconfig": "workspace:*",
-		"turbo": "2.3.3",
-		"typescript": "5.7.2",
-		"vitest": "2.1.8"
+		"turbo": "2.4.2",
+		"typescript": "5.7.3",
+		"vitest": "3.0.6"
 	},
 	"workspaces": [
 		"apps/*",
