--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -19,6 +19,7 @@
 		"eslint-import-resolver-typescript": "3.8.2",
 		"eslint-plugin-import-x": "4.6.1",
 		"eslint-plugin-svelte": "2.46.1",
+		"glob": "11.0.1",
 		"globals": "15.15.0",
 		"svelte-eslint-parser": "0.43.0",
 		"typescript-eslint": "8.24.1"
