feat: purgecss + manual utility classes instead of unocss (#3)

--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -8,19 +8,20 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"devDependencies": {
-		"@eslint/compat": "1.2.4",
+		"@eslint/compat": "1.2.6",
 		"@eslint/eslintrc": "3.2.0",
-		"@eslint/js": "9.17.0",
-		"@eslint/json": "0.9.0",
-		"@stylistic/eslint-plugin": "2.12.1",
+		"@eslint/js": "9.20.0",
+		"@eslint/json": "0.10.0",
+		"@stylistic/eslint-plugin": "4.0.1",
 		"@tools/jsconfig": "workspace:*",
 		"@tools/monorepo": "workspace:*",
-		"eslint": "9.17.0",
-		"eslint-import-resolver-typescript": "3.7.0",
+		"eslint": "9.20.1",
+		"eslint-import-resolver-typescript": "3.8.2",
 		"eslint-plugin-import-x": "4.6.1",
 		"eslint-plugin-svelte": "2.46.1",
-		"globals": "15.14.0",
+		"glob": "11.0.1",
+		"globals": "15.15.0",
 		"svelte-eslint-parser": "0.43.0",
-		"typescript-eslint": "8.18.2"
+		"typescript-eslint": "8.24.1"
 	}
 }
