--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -12,16 +12,17 @@
 		"@eslint/eslintrc": "3.3.0",
 		"@eslint/js": "9.21.0",
 		"@eslint/json": "0.10.0",
-		"@stylistic/eslint-plugin": "4.0.1",
+		"@stylistic/eslint-plugin": "4.1.0",
 		"@tools/jsconfig": "workspace:*",
 		"@tools/monorepo": "workspace:*",
 		"eslint": "9.21.0",
 		"eslint-import-resolver-typescript": "3.8.3",
+		"eslint-plugin-import": "2.31.0",
 		"eslint-plugin-import-x": "4.6.1",
-		"eslint-plugin-svelte": "2.46.1",
+		"eslint-plugin-svelte": "3.0.2",
 		"glob": "11.0.1",
 		"globals": "16.0.0",
-		"svelte-eslint-parser": "0.43.0",
+		"svelte-eslint-parser": "1.0.0",
 		"typescript-eslint": "8.25.0"
 	}
 }
