--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,8 +21,8 @@
 		"@ui/components": "workspace:*"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "4.0.0",
-		"@sveltejs/kit": "2.17.3",
+		"@sveltejs/adapter-vercel": "5.6.3",
+		"@sveltejs/kit": "2.19.0",
 		"@sveltejs/vite-plugin-svelte": "5.0.3",
 		"@tools/eslint": "workspace:*",
 		"@tools/monorepo": "workspace:*",
@@ -33,10 +33,10 @@
 		"@ui/theme": "workspace:*",
 		"mdsvex": "0.12.3",
 		"shiki": "3.1.0",
-		"svelte": "5.20.5",
-		"svelte-check": "4.1.4",
+		"svelte": "5.22.6",
+		"svelte-check": "4.1.5",
 		"tslib": "2.8.1",
-		"vite": "6.2.0"
+		"vite": "6.2.1"
 	},
 	"type": "module"
 }
