--- a/tools/package-update/package.json
+++ b/tools/package-update/package.json
@@ -1,13 +1,17 @@
 {
-	"name": "@tools/package-update",
-	"bin": {
-		"package-update": "./src/index.js"
-	},
-	"type": "module",
-	"devDependencies": {
-		"@tools/eslint": "workspace:*",
-		"@tools/jsconfig": "workspace:*",
-		"@tools/monorepo": "workspace:*",
-		"chalk": "5.4.1"
-	}
+    "name": "@tools/package-update",
+    "bin": {
+        "package-update": "./src/index.js"
+    },
+    "scripts": {
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix"
+    },
+    "type": "module",
+    "devDependencies": {
+        "@tools/eslint": "workspace:*",
+        "@tools/jsconfig": "workspace:*",
+        "@tools/monorepo": "workspace:*",
+        "chalk": "5.4.1"
+    }
 }
