--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test": "vitest",
-		"lint": "eslint . && stylelint **/*.{css,svelte}"
+		"lint": "eslint . && stylelint **/*.{css,svelte}",
+		"lint:fix": "eslint . --fix && stylelint **/*.{css,svelte} --fix"
 	},
 	"dependencies": {
 		"@core/database": "workspace:*",
@@ -32,11 +33,11 @@
 		"@tools/tsconfig": "workspace:*",
 		"@ui/theme": "workspace:*",
 		"mdsvex": "0.12.3",
-		"shiki": "3.1.0",
-		"svelte": "5.22.6",
+		"shiki": "3.2.1",
+		"svelte": "5.23.0",
 		"svelte-check": "4.1.5",
 		"tslib": "2.8.1",
-		"vite": "6.2.1"
+		"vite": "6.2.2"
 	},
 	"type": "module"
 }
