--- a/libs/state-controller/package.json
+++ b/libs/state-controller/package.json
@@ -5,6 +5,7 @@
 	},
 	"scripts": {
 		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
 		"test": "vitest"
 	},
 	"type": "module",
@@ -15,6 +16,6 @@
 	},
 	"dependencies": {
 		"@libs/standard": "workspace:*",
-		"svelte": "5.22.6"
+		"svelte": "5.23.0"
 	}
 }
