--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -5,7 +5,8 @@
 		".": "./src/index.js"
 	},
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix"
 	},
 	"devDependencies": {
 		"@eslint/compat": "1.2.7",
@@ -16,13 +17,13 @@
 		"@tools/jsconfig": "workspace:*",
 		"@tools/monorepo": "workspace:*",
 		"eslint": "9.22.0",
-		"eslint-import-resolver-typescript": "3.8.3",
+		"eslint-import-resolver-typescript": "3.8.7",
 		"eslint-plugin-import": "2.31.0",
 		"eslint-plugin-import-x": "4.6.1",
 		"eslint-plugin-svelte": "3.1.0",
 		"glob": "11.0.1",
 		"globals": "16.0.0",
 		"svelte-eslint-parser": "1.0.1",
-		"typescript-eslint": "8.26.0"
+		"typescript-eslint": "8.26.1"
 	}
 }
