--- a/tools/svelte-local-selector/package.json
+++ b/tools/svelte-local-selector/package.json
@@ -3,7 +3,10 @@
 	"exports": {
 		".": "./src/index.js"
 	},
-	"scripts": {},
+	"scripts": {
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix"
+	},
 	"type": "module",
 	"devDependencies": {
 		"@tools/eslint": "workspace:*",
@@ -12,7 +15,7 @@
 		"css-tree": "3.1.0",
 		"magic-string": "0.30.17",
 		"postcss": "8.5.3",
-		"svelte": "5.22.6",
+		"svelte": "5.23.0",
 		"zimmerframe": "1.1.2"
 	}
 }
