--- a/ui/components/package.json
+++ b/ui/components/package.json
@@ -11,14 +11,15 @@
 		"./theme-switcher": "./src/utils/ThemeSwitcher/index.ts"
 	},
 	"scripts": {
-		"lint": "eslint . && stylelint **/*.{css,svelte}"
+		"lint": "eslint . && stylelint **/*.{css,svelte}",
+		"lint:fix": "eslint . --fix && stylelint **/*.{css,svelte} --fix"
 	},
 	"type": "module",
 	"devDependencies": {
 		"@tools/eslint": "workspace:*",
 		"@tools/stylelint": "workspace:*",
 		"@tools/tsconfig": "workspace:*",
-		"svelte": "5.22.6",
+		"svelte": "5.23.0",
 		"svelte-check": "4.1.5",
 		"@libs/runes": "workspace:*",
 		"@libs/shortcuts": "workspace:*",
