--- a/ui/theme/package.json
+++ b/ui/theme/package.json
@@ -5,7 +5,10 @@
 		"./css": "./src/css/index.css",
 		"./postcss": "./src/postcss.config.js"
 	},
-	"scripts": {},
+	"scripts": {
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix"
+	},
 	"type": "module",
 	"devDependencies": {
 		"@csstools/postcss-global-data": "3.0.0",
@@ -19,6 +22,6 @@
 		"postcss": "8.5.3",
 		"postcss-import": "16.1.0",
 		"postcss-preset-env": "10.1.5",
-		"svelte": "5.22.6"
+		"svelte": "5.23.0"
 	}
 }
