--- a/core/database/tsconfig.json
+++ b/core/database/tsconfig.json
@@ -5,7 +5,13 @@
 	],
 	"references": [
 		{
+			"path": "../../domain/all"
+		},
+		{
 			"path": "../../libs/result"
+		},
+		{
+			"path": "../../libs/standard"
 		}
 	]
 }
