--- a/.editorconfig
+++ b/.editorconfig
@@ -7,9 +7,11 @@ root = true
 charset = utf-8
 indent_style = tab
 indent_size = 6
+tab_width = 6
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{json}]
+[*.{json,md}]
 indent_size = 2
+tab_width = 2
