--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-	"eslint.useFlatConfig": true
+	"eslint.useFlatConfig": true,
+	"editor.detectIndentation": false,
+	"prettier.enable": false,
 }
