fix: font preload

--- a/ui/theme/package.json
+++ b/ui/theme/package.json
@@ -2,6 +2,7 @@
 	"name": "@ui/theme",
 	"exports": {
 		".": "./src/index.ts",
+		"./assets/*": "./src/assets/*",
 		"./css": "./src/css/index.css",
 		"./postcss": "./src/postcss.config.js"
 	},
